--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,5 +1,5 @@
 :root  > * {
   --md-primary-fg-color:        #2E7D32;
   --md-primary-fg-color--light: #2E7D32;
-  --md-primary-fg-color--dark:  #1b471d;
+  --md-primary-fg-color--dark:  #0f7c15;
 }
